# AlayaLite

./: .coverage  .gitignore  .pre-commit-config.yaml  .typo.toml  ARM-build.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  codecov.yml  conanfile.py  pyproject.toml  pytest.ini  setup.py  tmp.txt
.github/workflows/: cibuildwheel.yaml  code-checker.yaml  code-cover.yaml  codecov.yaml  cross-platform-perf.yaml  format_check.yaml  laser-cross-platform-perf.yaml  license-checker.yaml  precommit-checker.yaml  ruff.yaml
app/: API_Usage_Documentation.md  Dockerfile  README.md  main.py
app/models/: collection.py
app/routers/: client.py
app/tests/: client_helpers.py  test_client.py
build_support/: pyinstall.sh
cmake/: AlayaDependencies.cmake  AlayaDiskANN.cmake  CompilerConfig.cmake  ConanDepConfig.cmake  ConanSetup.cmake  OptionConfig.cmake  PrintSummary.cmake
docs/: CLIENT_USER_MANUAL.md  LASER.md
examples/: disk_collection_basic.py  disk_collection_laser.py
examples/laser/: main.py
examples/rag/: db.py  llm.py  ui.py  utils.py
experiments/: disk_collection_gist1m.py  disk_collection_smoke_perf.py  diskann_sharded_alignment_plots.py  laser_same_prefix_search.py  laser_search_singlethread.py  laser_unified_swap_search.py
experiments/laser_cross_bench/: README.md  _config.py  plot_recall_qps.py  plot_recall_qps_l200.py  run_all.py  step1_build_vamana_diskann.py  step1_build_vamana_diskann.sh  step2_build_vamana_alayalite.py  (+3 more)
pyalaya/: CMakeLists.txt
python/: CMakeLists.txt  README.md  setup.py
python/adapters/annbenchmark/alayalite/: config.yml  module.py
python/benchmarks/: disk_laser_smoke.py  disk_vamana_smoke.py  laser_unified_fit_bench.py
python/cmake/: generate_shards.cmake  shards.cmake
python/cmake/templates/: inst_shim.cpp.in
python/include/: client.hpp  disk_collection.hpp  index.hpp  materialized_view.hpp  params.hpp  parse.hpp  pybind_modules.hpp
python/include/bindings/: pybind_index_methods.hpp
python/include/impl/: index_impl_core.hpp  index_impl_search.hpp
python/include/instantiations/: dispatch.hpp  instantiations.hpp  pyindex_instantiation_core.hpp  pyindex_instantiation_search.hpp  pyindex_instantiation_single.hpp
python/src/: pybind.cpp
python/src/alayalite/: __init__.py  client.py  collection.py  common.py  index.py  schema.py  utils.py
python/src/alayalite/bench/: _metrics.py  disk_collection.py  laser_compare.py
python/src/alayalite/laser/: __init__.py  _bindings.hpp  _idempotence.py  _io.py  _medoid.py  _pca.py  _seeds.py  beam_size.py  eval.py  groundtruth.py  io.py  medoid.py  memory.py  pca.py  preprocess.py  pretty.py
python/src/alayalite/rag/chunker/: sentence_chunker.py
python/src/alayalite/rag/embedder/: embedder.py
python/src/alayalite/vamana/: __init__.py  _bindings.hpp
python/src/bindings/: README.md  pybind_index.cpp  pybind_index_fit.cpp  pybind_index_hybrid.cpp  pybind_index_io.cpp  pybind_index_mutate.cpp  pybind_index_scalar.cpp  pybind_index_search.cpp
python/src/submodules/: pybind_disk.cpp  pybind_laser.cpp  pybind_vamana.cpp
python/tests/: test_bench_disk_laser_skip.py  test_bench_wrappers.py  test_client.py  test_client_with_url.py  test_collection.py  test_collection_get_embedding_by_id.py  test_disk_collection.py  test_disk_collection_batch_search.py  test_disk_collection_dispatch.py  test_disk_collection_lock.py  test_disk_collection_vamana.py  test_hybrid_search.py  test_index_types.py  test_laser_pca_determinism.py  test_md5.py  test_rabitq_search.py  test_recovery.py  test_update.py  test_vec_loader.py
python/tests/adapters/annbenchmark/: test_disk_laser.py
python/tests/bench/: conftest.py  test_datasets.py  test_disk_engine_synth_schema.py  test_disk_laser_skip.py  test_laser_compare_smoke.py  test_provenance.py  test_sweep.py  test_wrappers.py
python/tests/ci/: test_dispatch_matrix.py  test_dispatch_matrix_script.py  test_laser_cross_platform_perf.py  test_workflow_caching.py
python/tests/client/: test_client_with_url.py  test_collection.py  test_rabitq_search.py  test_update.py  test_vec_loader.py
python/tests/disk_collection/: test_batch_search.py  test_vamana.py
python/tests/diskann/: test_update.py
python/tests/fixtures/laser/: builder.py
python/tests/laser/api/: test_fit_basic.py  test_fit_byte_equal_to_manual.py  test_fit_medoid.py  test_fit_pca_branches.py  test_fit_seed_determinism.py  test_fit_skip_existing.py  test_from_prefix.py
python/tests/laser/bench/: test_unified_fit_bench.py  test_unified_fit_plot.py
python/tests/laser/unit/: test_pca_determinism.py  test_seeds.py
rbq_sample/: CMakeLists.txt  command.sh  gen_cluster.py  hnsw_rabitq_indexing.cpp  hnsw_rabitq_querying.cpp
scripts/: diff_vamana_index.py  gen_synth_100k_512d.py  license_scipt.py  plot_laser_recall_qps.py  plot_numactl_comparison.py
tests/: CMakeLists.txt
tests/disk/: CMakeLists.txt  disk_collection_test.cpp  segment_manifest_test.cpp  test_disk_collection_lock.cpp  test_disk_collection_vamana.cpp  test_vamana_reader.cpp  test_vamana_segment_searcher.cpp
tests/disk/fixtures/: build_laser_fixture.py
tests/executor/: CMakeLists.txt  SQ_test.cpp  coro_test.cpp  mutex_test.cpp  search_test.cpp  update_test.cpp
tests/index/: CMakeLists.txt  fusion_graph_test.cpp  hnsw_test.cpp  hybrid_quantization_performance_test.cpp  nndescent_test.cpp  nsg_test.cpp  rabitq_test.cpp  test_vamana_alignment.cpp
tests/rabitq/: CMakeLists.txt  deep1M_test.cpp
tests/simd/: CMakeLists.txt  cpu_features_test.cpp  fht_benchmark.cpp  fht_test.cpp  ip_full_benchmark.cpp  ip_sq4_benchmark.cpp  ip_sq8_benchmark.cpp  ip_test.cpp  l2_sqr_full_benchmark.cpp  l2_sqr_sq4_benchmark.cpp  l2_sqr_sq8_benchmark.cpp  l2_sqr_test.cpp
tests/space/: CMakeLists.txt  rabitq_space_test.cpp  raw_space_test.cpp  sq4_space_test.cpp  sq8_space_test.cpp
tests/utils/: CMakeLists.txt  dataset_utils_test.cpp  index_encoding_test.cpp  log_test.cpp  metadata_filter_test.cpp
tests/utils/rabitq_utils/: lut_test.cpp
tools/build_vamana_index/: CMakeLists.txt  build_vamana_for_laser.cpp
(+214 files in other folders)
