add_executable(disk_types_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_types_test.cpp)
add_executable(segment_manifest_test ${CMAKE_CURRENT_SOURCE_DIR}/segment_manifest_test.cpp)
add_executable(mmap_file_test ${CMAKE_CURRENT_SOURCE_DIR}/mmap_file_test.cpp)
add_executable(disk_flat_builder_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_flat_builder_test.cpp)
add_executable(disk_flat_searcher_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_flat_searcher_test.cpp)

target_link_libraries(disk_types_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(segment_manifest_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(mmap_file_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_flat_builder_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_flat_searcher_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
add_coverage_to_target(disk_types_test)
add_coverage_to_target(segment_manifest_test)
add_coverage_to_target(mmap_file_test)
add_coverage_to_target(disk_flat_builder_test)
add_coverage_to_target(disk_flat_searcher_test)

add_test(NAME disk_test_types COMMAND $<TARGET_FILE:disk_types_test>)
add_test(NAME disk_test_segment_manifest COMMAND $<TARGET_FILE:segment_manifest_test>)
add_test(NAME disk_test_mmap_file COMMAND $<TARGET_FILE:mmap_file_test>)
add_test(NAME disk_test_flat_builder COMMAND $<TARGET_FILE:disk_flat_builder_test>)
add_test(NAME disk_test_flat_searcher COMMAND $<TARGET_FILE:disk_flat_searcher_test>)
