add_executable(disk_types_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_types_test.cpp)
add_executable(segment_manifest_test ${CMAKE_CURRENT_SOURCE_DIR}/segment_manifest_test.cpp)
add_executable(mmap_file_test ${CMAKE_CURRENT_SOURCE_DIR}/mmap_file_test.cpp)
add_executable(disk_flat_builder_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_flat_builder_test.cpp)
add_executable(disk_flat_searcher_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_flat_searcher_test.cpp)
add_executable(disk_collection_test ${CMAKE_CURRENT_SOURCE_DIR}/disk_collection_test.cpp)
add_executable(segment_factory_test ${CMAKE_CURRENT_SOURCE_DIR}/segment_factory_test.cpp)
add_executable(disk_collection_factory_dispatch_test
               ${CMAKE_CURRENT_SOURCE_DIR}/disk_collection_factory_dispatch_test.cpp)
add_executable(test_vamana_reader ${CMAKE_CURRENT_SOURCE_DIR}/test_vamana_reader.cpp)
add_executable(test_vamana_greedy_search
               ${CMAKE_CURRENT_SOURCE_DIR}/test_vamana_greedy_search.cpp)
add_executable(test_vamana_segment_builder
               ${CMAKE_CURRENT_SOURCE_DIR}/test_vamana_segment_builder.cpp)
add_executable(test_vamana_segment_searcher
               ${CMAKE_CURRENT_SOURCE_DIR}/test_vamana_segment_searcher.cpp)
add_executable(test_segment_factory_vamana
               ${CMAKE_CURRENT_SOURCE_DIR}/test_segment_factory_vamana.cpp)
add_executable(test_disk_collection_vamana
               ${CMAKE_CURRENT_SOURCE_DIR}/test_disk_collection_vamana.cpp)
add_executable(test_vamana_adapter_overhead
               ${CMAKE_CURRENT_SOURCE_DIR}/test_vamana_adapter_overhead.cpp)

target_link_libraries(disk_types_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(segment_manifest_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(mmap_file_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_flat_builder_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_flat_searcher_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_collection_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(segment_factory_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(disk_collection_factory_dispatch_test PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_vamana_reader PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_vamana_greedy_search PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_vamana_segment_builder PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_vamana_segment_searcher PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_segment_factory_vamana PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_disk_collection_vamana PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
target_link_libraries(test_vamana_adapter_overhead PRIVATE ${THIRD_PARTY_LIBS} ${GTEST_LIBS})
add_coverage_to_target(disk_types_test)
add_coverage_to_target(segment_manifest_test)
add_coverage_to_target(mmap_file_test)
add_coverage_to_target(disk_flat_builder_test)
add_coverage_to_target(disk_flat_searcher_test)
add_coverage_to_target(disk_collection_test)
add_coverage_to_target(segment_factory_test)
add_coverage_to_target(disk_collection_factory_dispatch_test)
add_coverage_to_target(test_vamana_reader)
add_coverage_to_target(test_vamana_greedy_search)
add_coverage_to_target(test_vamana_segment_builder)
add_coverage_to_target(test_vamana_segment_searcher)
add_coverage_to_target(test_segment_factory_vamana)
add_coverage_to_target(test_disk_collection_vamana)
add_coverage_to_target(test_vamana_adapter_overhead)

add_test(NAME disk_test_types COMMAND $<TARGET_FILE:disk_types_test>)
add_test(NAME disk_test_segment_manifest COMMAND $<TARGET_FILE:segment_manifest_test>)
add_test(NAME disk_test_mmap_file COMMAND $<TARGET_FILE:mmap_file_test>)
add_test(NAME disk_test_flat_builder COMMAND $<TARGET_FILE:disk_flat_builder_test>)
add_test(NAME disk_test_flat_searcher COMMAND $<TARGET_FILE:disk_flat_searcher_test>)
add_test(NAME disk_test_collection COMMAND $<TARGET_FILE:disk_collection_test>)
add_test(NAME disk_test_segment_factory COMMAND $<TARGET_FILE:segment_factory_test>)
add_test(NAME disk_test_collection_factory_dispatch
         COMMAND $<TARGET_FILE:disk_collection_factory_dispatch_test>)
add_test(NAME test_vamana_reader COMMAND $<TARGET_FILE:test_vamana_reader>)
add_test(NAME test_vamana_greedy_search COMMAND $<TARGET_FILE:test_vamana_greedy_search>)
add_test(NAME test_vamana_segment_builder COMMAND $<TARGET_FILE:test_vamana_segment_builder>)
add_test(NAME test_vamana_segment_searcher COMMAND $<TARGET_FILE:test_vamana_segment_searcher>)
add_test(NAME test_segment_factory_vamana COMMAND $<TARGET_FILE:test_segment_factory_vamana>)
add_test(NAME test_disk_collection_vamana COMMAND $<TARGET_FILE:test_disk_collection_vamana>)
add_test(NAME test_vamana_adapter_overhead COMMAND $<TARGET_FILE:test_vamana_adapter_overhead>)
